<resources>
    <string name="app_name">Cody</string>
    <string name="home">ホーム</string>
    <string name="chat">トーク</string>
    <string name="search">検索</string>
    <string name="community">Community</string>
    <string name="contacts">コンタクト</string>
    <string name="profile">プロフィール</string>

    <string name="sign_in_error">サインインに失敗しました</string>
    <string name="intro1_title">プロフィール</string>
    <string name="intro1_content">まずはプロフィールを完成させましょう\nプロフィールが充実しているほどコミュニティに参加しやすくなります</string>
    <string name="intro2_title">コミュニティ</string>
    <string name="intro2_content">コミュニティに参加してみましょう\n入りたいコミュニティがない場合は自分のコミュニティを作ってみましょう</string>
    <string name="intro3_title">トーク</string>
    <string name="intro3_content">トークをしてイベントに参加したり、実際に会って交流を深めましょう</string>
    <string name="intro4_title">開発</string>
    <string name="intro4_content">作りたいサービスやアプリを決めたら、チームで開発しましょう</string>

    <string name="dialog_talk">トーク</string>
    <string name="empty_chat_room">トークがありません</string>
    <string name="no_message">メッセージがありません</string>

    <string name="dialog_detail">詳細</string>

    <string name="edit_toolbar">編集</string>

    <string name="location_search">活動場所で検索</string>
    <string name="filter">絞り込む</string>
    <string name="filter_selected">フィルター:" "</string>
    <string name="member_count_filter">メンバーが二人以上</string>
    <string name="activity_filter">過去に活動したことがある</string>
    <string name="community_search">コミュニティ</string>
    <string name="user_search">ユーザ</string>
    <string name="empty">検索結果： 0件</string>

    <string name="community_title">コミュニティ</string>
    <string name="friend_title">フレンド</string>
    <string name="empty_contacts">コミュニティを探しに行きましょう</string>

    <string name="confirm">承認</string>
    <string name="disconfirm">拒否</string>
    <string name="confirm_toast">リクエストを承認しました</string>
    <string name="disconfirm_toast">リクエストを拒否しました</string>
    <string name="request_title">リクエスト一覧</string>
    <string name="community_request_title">Community参加リクエスト</string>
    <string name="friend_request_title">フレンドリクエスト</string>
    <string name="empty_requests">リクエストがありません</string>


    <string name="create_community">コミュニティ作成</string>
    <string name="complete_create_community">コミュニティを作成しました!</string>
    <string name="blank_error">空欄があります</string>
    <string name="name_length_error">コミュニティ名は3文字以上にしてください</string>
    <string name="image_error">コミュニティの画像を設定してください</string>
    <string name="feature_default">設定しない</string>
    <string name="feature1">初心者歓迎</string>
    <string name="feature2">経験者募集</string>
    <string name="feature3">少数精鋭</string>
    <string name="feature4">大学生募集</string>

    <string name="friend_invite">友達を招待する</string>
    <string name="invite">招待</string>
    <string name="loading">Loading</string>


    <string name="setting">設定する</string>
    <string name="cancel">キャンセル</string>
    <string name="update_failed">更新に失敗しました。アプリを再起動してください。</string>

    <string name="friend_request">フレンドリクエスト</string>
    <string name="send_friend_request">フレンドリクエストを送る</string>
    <string name="in_request">申請中</string>
    <string name="community_request">参加リクエスト</string>
    <string name="send_community_request">リクエストを送る</string>
    <string name="sent_community_request">参加リクエストを送信しました</string>
    <string name="sent_friend_request">フレンドリクエストを送信しました</string>

    <string name="age_title">年齢</string>
    <string name="age_content">歳</string>

    <string name="experience_title">開発経験</string>
    <string name="experience_default">設定しない</string>
    <string name="experience1">未経験</string>
    <string name="experience2">始めたばかり</string>
    <string name="experience3">いくつかアプリを作ったことがある</string>
    <string name="experience4">実務経験あり</string>

    <string name="popular_community">人気のコミュニティ</string>
    <string name="empty_community">communityがありません\n\n 自分のコミュニティを作ってみましょう!</string>
    <string name="community_name">コミュニティ名</string>
    <string name="edit_community_name">コミュニティ名を編集</string>
    <string name="community_name_content">コミュニティ名を30字以内で入力してください</string>
    <string name="description">コミュニティの説明</string>
    <string name="edit_description">コミュニティの説明を編集</string>
    <string name="description_content">
        他のユーザーに向けてこのコミュニティの紹介をしてください。\n\n
        このコミュニティの特徴はなんでしょう？\n
        どのような人に入ってもらいたいですか？\n
    </string>
    <string name="feature">特徴</string>
    <string name="edit_feature">特徴を編集</string>
    <string name="feature_content">このコミュニティの特徴を教えてください。</string>
    <string name="location">主な活動場所</string>
    <string name="edit_location">活動場所を編集</string>
    <string name="location_content">主に活動する場所を教えてください。</string>
    <string name="last_activity">最近の活動</string>
    <string name="activity_empty">活動がありません</string>
    <string name="move_activity_history">過去の活動を見る</string>
    <string name="activity_post">活動を投稿する</string>
    <string name="activity_date">活動日　</string>
    <string name="activity_content">活動内容</string>
    <string name="activity_content_hint">活動内容を入力してください</string>
    <string name="activity_location">活動場所</string>
    <string name="activity_location_hint">活動場所を入力してください</string>
    <string name="post">投稿</string>
    <string name="activity_history">活動履歴</string>

    <string name="edit_name">名前を編集</string>
    <string name="edit_self_introduction">自己紹介を編集</string>
    <string name="edit_programming_language">プログラミング言語を編集</string>
    <string name="edit_my_apps">過去に作ったアプリを編集</string>

    <string name="name">名前</string>
    <string name="programming_language">プログラミング言語</string>
    <string name="programming_language_content">普段使っているプログラミング言語を教えてください。</string>
    <string name="self_introduction">自己紹介</string>
    <string name="self_introduction_content">他のユーザーに向けて自己紹介しましょう。\n\nどのようなことに興味があるか教えてください。\nまた、作りたい物があればそれも教えてください。</string>
    <string name="my_apps">過去に作ったアプリ</string>
    <string name="my_apps_content">これまでに作ったアプリを教えてください。\ngithubのアカウントを持っていれば、githubのurlも教えてください。</string>


    <string name="community_member">メンバー</string>
    <string name="community_member_button">メンバーを見る</string>

    <string name="leave">退会</string>
    <string name="leave_toast">退会しました</string>

    <string name="edit_finish">完了</string>
    <string name="blank">空欄があります</string>

    <string name="profile_setting">プロフィールを確認、編集</string>
    <string name="profile_first">Codyへようこそ!\nまずは、プロフィールを完成させましょう</string>
    <string name="feedback_setting">フィードバックを送る</string>
    <string name="email">cody1dev@gmail.com</string>
    <string name="privacy_policy_setting">プライバシーポリシー</string>
    <string name="privacy_policy_content">
        ・ 本アプリで取得したデータについては開発者が取得することは致しません。\n\n\n
        ・ 画像/メディア/ファイルへのアクセスは、プロフィール画像を設定する際に利用しています。\n\n\n
        ・ 本アプリは、サービスのご利用状況を把握するためにGoogle Analyticsを利用しています。\n\n
        Google Analyticsの利用により収集されたデータは、Google社のプライバシーポリシーに基づいて管理されます。\n
        Google Analyticsの利用規約・プライバシーポリシーについてはGoogle Analyticsのホームページ(http://www.google.co.jp/intl/ja/policies/privacy/) でご確認ください。\n\n
        なお、Google Analyticsのサービス利用による損害については、開発者は責任を負わないものとします。
        
    </string>
    <string name="license_setting">ライセンス</string>
    <string name="logout_setting">ログアウト</string>

    <string name="licenses_dialog">LicensesDialog</string>
    <string name="licenses_dialog_copyright">Copyright 2013\-2017 Philip Schiffer</string>
    <string name="easy_feedback">EasyFeedback</string>
    <string name="easy_feedback_copyright">Copyright 2017 Ramankit Singh</string>
    <string name="matisse">Matisse</string>
    <string name="matisse_copyright">Copyright 2017 Zhihu Inc.</string>
    <string name="android_image_cropper">Android Image Cropper</string>
    <string name="android_image_cropper_copyright">Copyright 2016, Arthur Teplitzki, 2013, Edmodo, Inc.</string>
    <string name="glide">Glide</string>
    <string name="glide_copyright">Copyright 2014 Google, Inc.</string>
    <string name="secure_preferences">Secure-preferences</string>
    <string name="secure_preferences_copyright">Copyright (C) 2013, Daniel Abraham, Scott Alexander-Bown</string>
    <string name="google_gson">google-gson</string>
    <string name="google_gson_copyright">Copyright 2008 Google Inc.</string>
    <string name="indicator">AVLoadingIndicatorView</string>
    <string name="indicator_copyright">Copyright 2015 jack wang</string>
    <string name="circular_dialogs">CircularDialogs</string>
    <string name="toggle">Toggle</string>
    <string name="toggle_copyright">Copyright (C) 2018 Angad Singh</string>
    <string name="toggle_button_group">ToggleButtonGroup</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_copyright">Copyright 2015-2017 Stephen Tuso</string>
    <string name="twitter_kit">Twitter Kit for Android</string>
    <string name="twitter_kit_copyright">Copyright 2017 Twitter, Inc.</string>

    <string name="connection_alert">インターネットに\n接続されていません</string>
    <string name="cannot_login">セッションが切れています</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
