<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/community_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar_layout"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_date"
                    android:textSize="@dimen/sp_18"
                    android:layout_marginRight="@dimen/dp_24"
                    android:layout_marginEnd="@dimen/dp_24"/>

                <EditText
                    android:id="@+id/activity_date_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:cursorVisible="false"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_location"
                    android:textSize="@dimen/sp_18"
                    android:layout_marginRight="@dimen/dp_24"
                    android:layout_marginEnd="@dimen/dp_24"/>

                <EditText
                    android:id="@+id/activity_location_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="10"
                    android:hint="@string/activity_location_hint"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:text="@string/activity_content"
                android:textSize="@dimen/sp_18"/>

            <EditText
                android:id="@+id/activity_content_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_6"
                android:background="@drawable/description_text_border"
                android:gravity="top|start"
                android:layout_gravity="center_horizontal"
                android:textSize="15sp"
                android:maxLength="100"
                android:maxLines="13"
                android:minLines="13"
                android:padding="@dimen/dp_16"
                android:hint="@string/activity_content_hint" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_16"
        android:layout_alignParentBottom="true"
        android:background="@color/sky_blue"
        android:text="@string/post"
        android:textColor="@color/white" />
</RelativeLayout>


