<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/dp_18"
            android:layout_marginLeft="@dimen/dp_18"
            android:layout_marginRight="@dimen/dp_18"
            android:layout_marginStart="@dimen/dp_18"
            android:paddingBottom="@dimen/dp_32">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/profile_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp" />

                <TextView
                    android:id="@+id/name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_24"
                    android:textColor="@color/profile"
                    android:textSize="@dimen/sp_24" />

                <Button
                    android:id="@+id/name_edit_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/edit_community_name"
                    android:textSize="@dimen/sp_16" />

                <View
                    android:id="@+id/description_title_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dp_22"
                    android:background="@color/inactive_gray" />

                <TextView
                    android:id="@+id/description_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_22"
                    android:text="@string/description"
                    android:textColor="@color/profile"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:id="@+id/description_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:textColor="@color/profile_content"
                    android:textSize="@dimen/sp_16"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/description_edit_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/edit_description"
                    android:textSize="@dimen/sp_16" />

                <View
                    android:id="@+id/location_title_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dp_22"
                    android:background="@color/inactive_gray" />

                <TextView
                    android:id="@+id/location_title_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_22"
                    android:text="@string/location"
                    android:textColor="@color/profile"
                    android:textSize="@dimen/sp_18" />

                <TextView
                    android:id="@+id/location_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_22"
                    android:textColor="@color/profile_content"
                    android:textSize="@dimen/sp_16"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/location_edit_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_24"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/edit_location"
                    android:textSize="@dimen/sp_16" />

            </LinearLayout>

        </ScrollView>

        <View
            android:id="@+id/progress_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B3ffffff"
            android:visibility="gone" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/AVLoadingIndicatorView"
            app:indicatorName="BallPulseIndicator"
            app:indicatorColor="@color/light_blue2"
            android:visibility="gone" />

    </FrameLayout>


</LinearLayout>